# GL_EmbeddedProCamp

Lecture_1/Exercise_1/inc/: swap.h
Lecture_1/Exercise_1/src/: main.c
Lecture_1/Exercise_2/inc/: convert.h
Lecture_1/Exercise_2/src/: main.c
Lecture_1/Exercise_3/inc/: rectangle.h
Lecture_1/Exercise_3/src/: main.c
Lecture_1/Exercise_4/inc/: circle.h
Lecture_1/Exercise_4/src/: main.c
Lecture_1/Exercise_5/inc/: factorial.h
Lecture_1/Exercise_5/src/: main.c
Lecture_1/Exercise_6/inc/: divider.h
Lecture_1/Exercise_6/src/: main.c
Lecture_10/Exercise_1/: .mxproject  Exercise_1.ioc
Lecture_10/Exercise_1/MDK-ARM/: Exercise_1.uvguix.badziyur  Exercise_1.uvoptx  Exercise_1.uvprojx  startup_stm32f303xc.lst
Lecture_10/Exercise_1/Src/: main.c
Lecture_11_12/Exercise1/: .mxproject  livelock.ioc
Lecture_11_12/Exercise1/MDK-ARM/: livelock.uvoptx  livelock.uvprojx
Lecture_11_12/Exercise1/Src/: main.c
Lecture_11_12/Exercise2/Src/: main.c  (+1 more)
Lecture_11_12/Exercise3/: .mxproject  dining.ioc
Lecture_3/Exercise_1/: .dir-locals.el  CMakeLists.txt
Lecture_3/Exercise_1/inc/: copy.h  copy.h~
Lecture_3/Exercise_1/src/: main.c  main.c~
Lecture_5/Exercise_1/: uart.uvoptx  uart.uvprojx
Lecture_6/: uartInterrupts.uvguix.badziyur
Lecture_6/Exercise_1/: README.md  uartInterrupts.uvoptx  uartInterrupts.uvprojx
Lecture_6/Exercise_2/: spidma.uvoptx  spidma.uvprojx
Lecture_7/Exercise_1/: CMakeLists.txt
Lecture_7/Exercise_1/inc/: main.h
Lecture_7/Exercise_1/src/: main.c
Lecture_9/Exercise1/: .mxproject  Exercise1.ioc
Lecture_9/Exercise2/: .mxproject  Exercise2.ioc
(+145 files in other folders)
